# DatavizFT

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_OLD.md  docker-compose.yml  pyproject.toml  pytest.ini  quality-local.bat  quality.bat  requirements-dev.txt  requirements.txt  restaurer_offres.py  run_pipeline.py  test_architecture.py  verif_dates_clotures.py  vulture.toml
.github/: BRANCH_PROTECTION.md  CONTRIBUTING.md  README_TRANSFORMATION.md  pull_request_template.md
.github/workflows/: ci-cd.yml  codeql.yml  debug-release.yml  pr-check.yml  release.yml
backend/: __init__.py  api_client.py  api_client_fixed.py  auth.py  codes_insee.py  config.py  main.py  pipelineFT.py
backend/clients/: __init__.py  france_travail.py
backend/data/: __init__.py  competences.json  competences.py
backend/database/: __init__.py  connection.py
backend/models/: __init__.py  competence.py  competences.json  offre.py
backend/pipelines/: __init__.py  france_travail_m1805.py  france_travail_mongodb.py
backend/tools/: __init__.py  api_client.py  competence_analyzer.py  data_loader.py  error_handling.py  file_manager.py  logging_config.py  text_processor.py
backend_v2/: ARCHITECTURE.md  SPECIFICATION.md  __init__.py  config.py
backend_v2/application/: __init__.py
backend_v2/domain/: __init__.py
data/: competences_extraites_20251005_082125.json  competences_extraites_20251005_093154.json  competences_extraites_20251005_100143.json  competences_extraites_20251006_071741.json  competences_extraites_20251009_063700.json  competences_extraites_20251009_064335.json  competences_extraites_20251015_064148.json  offres_M1805_FRANCE_20251005_082046.json  offres_M1805_FRANCE_20251005_093154.json  offres_M1805_FRANCE_20251005_100143.json  offres_M1805_FRANCE_20251006_071741.json  offres_M1805_FRANCE_20251009_063700.json  offres_M1805_FRANCE_20251009_064335.json  offres_M1805_FRANCE_20251015_064147.json
docs/: analyse_architecture_dataviz_mongodb.md  architecture_backend_refactorisee.md  debug_auto_release.md  ebauche_API_France_Travail_Parametres.md  fix_release_permissions.md  guide_exports_modules.md  guide_module_models.md  improvement-roadmap.md  logging_system.md  migration_json_mongodb.md  migration_placeholder_tests.md  mongodb_atlas_setup.md  mongodb_installation_windows.md  mongodb_persistence.md  security.md  setup_qualite.md  tests_guide.md  tests_system_summary.md
scripts/: analyser_competences_completes.py  analyser_localisation.py  check_docker.py  check_mongodb_data.py  clean_collections.py  clean_mongodb_indexes.py  disable_mongodb_validation.py  download_docker.ps1  download_docker_amd64.ps1  examiner_stats_competences.py  examiner_structure_offre.py  install_docker_mongodb.ps1  install_mongodb.ps1  migrate_direct_mongodb.py  migrate_json_to_mongodb.py  preview_readme.py  reinitialiser_mongodb.py  setup_docker_persistence.py  test_connectivity.py  test_mongodb.py  test_pipeline_mongodb.py  test_simple_pipeline.py  verifier_donnees_completes.py  verifier_donnees_completes_v2.py  vider_mongodb.py
tests/: __init__.py  conftest.py  test_coherence_offres_cloturees.py  test_config.py  test_integration.py
(+60 files in other folders)
